# FMEA-MultiAgentAI

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  GITHUB_GUIDE.md  README.md  alembic.ini  check_history.py  check_index.py  check_models.py  check_tables.py  docker-compose.yml  extract_documents.py  fmea_app.html  fmea_local.session.sql  pyproject.toml  requirements.txt  seed_pinned_suggestions.py
.streamlit/: config.toml
backend/: Dockerfile  database.py  main.py  models.py  requirements.txt  schemas.py  storage.py
backend/agents/: specialist_agents.py
backend/services/: book_indexer.py  extractor.py
data/sample_documents/: XR110 DFEMA V2.0 2025.12.30.xls
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
legacy/: fmea_app.html
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_allow_nullable_session_id_in_ai_suggestions.py  ac938dff9acc_create_initial_tables.py  de6110153bb8_add_judge_and_human_review_fields_to_ai_.py
src/analytics/: __init__.py  emv_analyzer.py  monte_carlo.py  probability_calibrator.py
src/nlp/: __init__.py  data_models.py  prompts.py  risk_analyzer.py  risk_deduplicator.py  text_processor.py
src/preprocessing/: __init__.py  artifact_remover.py  fmea_extractor.py  (+3 more)
tests/: test_artifact_removal.py  test_extraction.py  test_fmea_extraction.py  test_lessons_learned.py  test_monte_carlo.py  test_multilingual_rag.py  test_rag.py  test_utc_json.py
translations/: en.json  fr.json  pt-br.json
(+8 files in other folders)
