[tool.poetry]
name = "fmea-multiagent-ai"
version = "0.1.0"
description = "AI-Driven FMEA Multi-Agent Framework"
authors = ["Ederson Carvalhar Fernandes"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# API framework
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0"}
python-multipart = ">=0.0.9"

# HTTP / LLM client
httpx = ">=0.27.0"
openai = ">=1.0.0"

# PDF extraction
pymupdf = ">=1.23.0"
PyPDF2 = ">=3.0.1"

# Office / Excel
pandas = ">=2.0.0"
openpyxl = ">=3.1.0"
xlrd = ">=2.0.1"
python-docx = ">=0.8.11"

# Numerics / Analytics
numpy = ">=1.24.0"
scipy = ">=1.11.0"

# NLP / Embeddings
sentence-transformers = ">=2.2.2"
langdetect = ">=1.0.9"

# Vector store
chromadb = ">=0.5.0"

# Visualization
plotly = ">=5.15.0"
networkx = ">=3.0"

# Schema / env
pydantic = ">=2.0.0"
python-dotenv = ">=1.0.0"

# Database (PostgreSQL + async + migrations)
sqlalchemy = ">=2.0.0"
asyncpg = ">=0.29.0"
alembic = ">=1.13.0"

# Object storage (MinIO / S3-compatible)
minio = ">=7.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
